[gd_scene load_steps=18 format=2]

[ext_resource path="res://addons/sprite-baker/scenes/Frame.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/sprite-baker/scripts/models.gd" type="Script" id=2]
[ext_resource path="res://addons/sprite-baker/scripts/folder_path.gd" type="Script" id=3]
[ext_resource path="res://addons/sprite-baker/icons/icon_folder.svg" type="Texture" id=4]
[ext_resource path="res://addons/sprite-baker/icons/load.svg" type="Texture" id=5]
[ext_resource path="res://addons/sprite-baker/icons/load_all.svg" type="Texture" id=6]
[ext_resource path="res://addons/sprite-baker/icons/clear_files.svg" type="Texture" id=7]
[ext_resource path="res://addons/sprite-baker/scripts/file_tree.gd" type="Script" id=8]
[ext_resource path="res://addons/sprite-baker/scripts/loader.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.172549, 0.231373, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.411765, 0.611765, 0.909804, 1 )
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.145098, 0.172549, 0.231373, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color( 0.121569, 0.145098, 0.192157, 1 )
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.145098, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.396078, 0.423529, 0.482353, 1 )
border_blend = true
corner_radius_top_right = 2
corner_radius_bottom_right = 2

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.168627, 0.188235, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.396078, 0.423529, 0.482353, 1 )
corner_radius_top_right = 2
corner_radius_bottom_right = 2
expand_margin_left = 1.0

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.168627, 0.188235, 0.231373, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.411765, 0.611765, 0.909804, 1 )
border_blend = true
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_detail = 12
expand_margin_left = 1.0

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.145098, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.121569, 0.145098, 0.192157, 1 )
corner_radius_top_right = 2
corner_radius_bottom_right = 2

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="Models" instance=ExtResource( 1 )]
margin_right = 249.0
margin_bottom = 328.0
title = "Models"

[node name="Box" parent="." index="0"]
margin_right = 254.0
margin_bottom = 326.0

[node name="TitleBar" parent="Box" index="0"]
margin_right = 252.0

[node name="Title" parent="Box/TitleBar/TitleBox" index="0"]
margin_right = 183.0
text = "Models"

[node name="MoveLeft" parent="Box/TitleBar/TitleBox" index="1"]
margin_left = 187.0
margin_right = 203.0

[node name="MoveRight" parent="Box/TitleBar/TitleBox" index="2"]
margin_left = 207.0
margin_right = 223.0

[node name="Minimize" parent="Box/TitleBar/TitleBox" index="3"]
margin_left = 227.0
margin_right = 243.0

[node name="Margin" parent="Box/TitleBar/TitleBox" index="4"]
margin_left = 247.0
margin_right = 252.0

[node name="Panel" parent="Box" index="1"]
margin_right = 252.0
margin_bottom = 324.0
focus_mode = 1

[node name="Content" parent="Box/Panel" index="0"]
margin_right = 247.0
margin_bottom = 289.0

[node name="ModelsBox" type="VBoxContainer" parent="Box/Panel/Content" index="0"]
margin_right = 242.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
folder_node_path = NodePath("PathBox/FolderPath")
file_tree_path = NodePath("FoundModels/FileTree")
file_list_path = NodePath("LoadedModels/List")
load_all_path = NodePath("LoadBox/LoadAll")
load_path = NodePath("LoadBox/Load")
clear_path = NodePath("LoadBox/Clear")

[node name="PathBox" type="HBoxContainer" parent="Box/Panel/Content/ModelsBox" index="0"]
margin_right = 242.0
margin_bottom = 24.0
custom_constants/separation = 0

[node name="FolderPath" type="LineEdit" parent="Box/Panel/Content/ModelsBox/PathBox" index="0"]
margin_right = 218.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
clear_button_enabled = true
placeholder_text = "(Workspace folder path)"
script = ExtResource( 3 )

[node name="SearchFolder" type="Button" parent="Box/Panel/Content/ModelsBox/PathBox" index="1"]
margin_left = 218.0
margin_right = 242.0
margin_bottom = 24.0
hint_tooltip = "Select workspace folder. Models will be searched within this folder and direct sub-folders (1 level deep only)."
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
icon = ExtResource( 4 )

[node name="LoadBox" type="HBoxContainer" parent="Box/Panel/Content/ModelsBox" index="1"]
margin_top = 28.0
margin_right = 242.0
margin_bottom = 54.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Separator1" type="VSeparator" parent="Box/Panel/Content/ModelsBox/LoadBox" index="0"]
margin_right = 10.0
margin_bottom = 26.0
custom_styles/separator = SubResource( 7 )
custom_constants/separation = 10

[node name="Load" type="Button" parent="Box/Panel/Content/ModelsBox/LoadBox" index="1"]
margin_left = 10.0
margin_right = 42.0
margin_bottom = 26.0
hint_tooltip = "Load selected models."
size_flags_horizontal = 4
disabled = true
icon = ExtResource( 5 )

[node name="Separator2" type="VSeparator" parent="Box/Panel/Content/ModelsBox/LoadBox" index="2"]
margin_left = 42.0
margin_right = 47.0
margin_bottom = 26.0
custom_styles/separator = SubResource( 7 )
custom_constants/separation = 5

[node name="LoadAll" type="Button" parent="Box/Panel/Content/ModelsBox/LoadBox" index="3"]
margin_left = 47.0
margin_right = 79.0
margin_bottom = 26.0
hint_tooltip = "Load all found models."
size_flags_horizontal = 4
disabled = true
icon = ExtResource( 6 )

[node name="Separator3" type="VSeparator" parent="Box/Panel/Content/ModelsBox/LoadBox" index="4"]
margin_left = 79.0
margin_right = 84.0
margin_bottom = 26.0
custom_styles/separator = SubResource( 7 )
custom_constants/separation = 5

[node name="Clear" type="Button" parent="Box/Panel/Content/ModelsBox/LoadBox" index="5"]
margin_left = 84.0
margin_right = 116.0
margin_bottom = 26.0
hint_tooltip = "Unload already loaded models."
size_flags_horizontal = 4
disabled = true
icon = ExtResource( 7 )

[node name="Separator1" type="HSeparator" parent="Box/Panel/Content/ModelsBox" index="2"]
margin_top = 58.0
margin_right = 242.0
margin_bottom = 62.0

[node name="LoadedModelsLabel" type="Label" parent="Box/Panel/Content/ModelsBox" index="3"]
margin_top = 66.0
margin_right = 242.0
margin_bottom = 80.0
text = "Loaded Models"

[node name="LoadedModels" type="ScrollContainer" parent="Box/Panel/Content/ModelsBox" index="4"]
margin_top = 84.0
margin_right = 242.0
margin_bottom = 169.0
size_flags_vertical = 3

[node name="List" type="ItemList" parent="Box/Panel/Content/ModelsBox/LoadedModels" index="0"]
margin_right = 242.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Separator2" type="HSeparator" parent="Box/Panel/Content/ModelsBox" index="5"]
margin_top = 173.0
margin_right = 242.0
margin_bottom = 177.0

[node name="ModelsLabel" type="Label" parent="Box/Panel/Content/ModelsBox" index="6"]
margin_top = 181.0
margin_right = 242.0
margin_bottom = 195.0
text = "Models"

[node name="FoundModels" type="ScrollContainer" parent="Box/Panel/Content/ModelsBox" index="7"]
margin_top = 199.0
margin_right = 242.0
margin_bottom = 284.0
size_flags_vertical = 3

[node name="FileTree" type="Tree" parent="Box/Panel/Content/ModelsBox/FoundModels" index="0"]
margin_right = 242.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg_focus = SubResource( 8 )
columns = 5
hide_root = true
select_mode = 1
script = ExtResource( 8 )

[node name="Loader" type="Node" parent="Box/Panel/Content/ModelsBox" index="8"]
script = ExtResource( 9 )

[node name="MinBar" parent="." index="1"]
margin_right = 254.0
margin_bottom = 326.0

[node name="Title" parent="MinBar/TitleBox/Panel" index="0"]
text = "Models"

[node name="DropLeft" parent="." index="2"]
margin_right = 254.0
margin_bottom = 326.0

[node name="DropRight" parent="." index="3"]
margin_right = 254.0
margin_bottom = 326.0
[connection signal="files_updated" from="Box/Panel/Content/ModelsBox/PathBox/FolderPath" to="Box/Panel/Content/ModelsBox" method="_on_FolderPath_files_updated"]
[connection signal="files_updated" from="Box/Panel/Content/ModelsBox/PathBox/FolderPath" to="Box/Panel/Content/ModelsBox/FoundModels/FileTree" method="_on_FolderPath_files_updated"]
[connection signal="pressed" from="Box/Panel/Content/ModelsBox/PathBox/SearchFolder" to="Box/Panel/Content/ModelsBox" method="_on_SearchFolder_pressed"]
[connection signal="pressed" from="Box/Panel/Content/ModelsBox/LoadBox/Load" to="Box/Panel/Content/ModelsBox" method="_on_Load_pressed"]
[connection signal="pressed" from="Box/Panel/Content/ModelsBox/LoadBox/LoadAll" to="Box/Panel/Content/ModelsBox" method="_on_LoadAll_pressed"]
[connection signal="pressed" from="Box/Panel/Content/ModelsBox/LoadBox/Clear" to="Box/Panel/Content/ModelsBox" method="_on_Clear_pressed"]
[connection signal="item_selected" from="Box/Panel/Content/ModelsBox/LoadedModels/List" to="Box/Panel/Content/ModelsBox" method="_on_List_item_selected"]
[connection signal="item_edited" from="Box/Panel/Content/ModelsBox/FoundModels/FileTree" to="Box/Panel/Content/ModelsBox/FoundModels/FileTree" method="_on_item_edited"]
[connection signal="item_selected" from="Box/Panel/Content/ModelsBox/FoundModels/FileTree" to="Box/Panel/Content/ModelsBox/FoundModels/FileTree" method="_on_item_selected"]
[connection signal="selected_files" from="Box/Panel/Content/ModelsBox/FoundModels/FileTree" to="Box/Panel/Content/ModelsBox" method="_on_FileTree_selected_files"]
[connection signal="loading_finished" from="Box/Panel/Content/ModelsBox/Loader" to="Box/Panel/Content/ModelsBox" method="_on_Loader_loading_finished"]
